--- a/app/views/clinics/index.html.erb
+++ b/app/views/clinics/index.html.erb
@@ -6,7 +6,7 @@
 
 <div id="clinics" class="container">
   <div class="row row-cols-3 text-center">
-    <% current_account.clinics.each do |clinic| %>
+    <% @clinics.each do |clinic| %>
       
       <div class="col">
         <div class="card p-1 m-1" id="clinic">
