--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,12 +4,12 @@
   <h1 class="text-center" >Account Overview</h1>
   <hr/>
 
-  <h5 class="text-end fw-normal"><%= @today %></h5>
+  <h5 class="text-end fw-normal"><%= @today.strftime('%B %-d, %Y') %></h5>
   <h6>Summary:</h6>
   <ul>
-    <li>Clinics on Account: <%= current_account.clinics.count %></li>
-    <li>Doctors on Account: <%= current_account.doctors.count %></li>
-    <li>Patients on Account: <%= current_account.patients.count %></li>
+    <li>Clinics on Account: <%= @clinics.count %></li>
+    <li>Doctors on Account: <%= @doctors.count %></li>
+    <li>Patients on Account: <%= @patients.count %></li>
   </ul>
 
   <p>The account page will display the first 3 entries for Clinics, Doctors & Patients. Click "See All" for the full list.</p>
