--- a/app/views/home/_clinics.html.erb
+++ b/app/views/home/_clinics.html.erb
@@ -9,7 +9,7 @@
       </tr>
     </thead>
     <tbody class="table-group-divider">
-      <% if current_account.clinics.empty? %>
+      <% if @clinics.empty? %>
 
         <tr>
           <td colspan="4" class="text-center">Added Clinics will appear here</td>
@@ -17,7 +17,7 @@
 
       <% else %>
 
-        <% current_account.clinics.limit(3).each do |clinic| %>
+        <% @clinics.limit(3).each do |clinic| %>
 
           <tr>
             <td scope="row"><%= clinic.name %></td>
