--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -11,43 +11,41 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :time, style: "display: block" %>
-    <%= form.time_select :time ,:minute_step => 30 %>
-  </div>
+  <table class="table table-borderless table-sm">
+    <tbody>
 
-  <div>
-    <%= form.label :date, style: "display: block" %>
-    <%= form.date_field :date %>
-  </div>
+      <tr>
+          <td><%= form.label :date %><%= form.date_field :date %></td>
+          <td><%= form.label :time%><%= form.time_select :time ,:minute_step => 30 %></td>
+      </tr>
 
-  <div>
-    <%= form.label :clinic_id, style: "display: block" %>
-    <%= form.collection_select(:clinic_id, Clinic.all, :id, :name ) %>
-  </div>
+      <hr/>
 
-  <div>
-    <%= form.label :doctor_id, style: "display: block" %>
-    <%= form.collection_select(:doctor_id, Doctor.all, :id, :name ) %>
-  </div>
+      <tr>
+        <td><%= form.label :clinic_id %><%= form.collection_select(:clinic_id, Clinic.all, :id, :name ) %></td>
+      </tr>
+      <tr>
+        <td><%= form.label :doctor_id%><%= form.collection_select(:doctor_id, Doctor.all, :id, :name ) %></td>
+      </tr>
 
-  <div>
-    <%= form.label :patient_id, style: "display: block" %>
-    <%= form.collection_select(:patient_id, Patient.all, :id, :name ) %>
-  </div>
+      <tr>
+        <td><%= form.label :patient_id%><%= form.collection_select(:patient_id, Patient.all, :id, :name ) %></td>
+      </tr>
 
-  <div>
-    <% form.label :account_id, style: "display: block" %>
+      <tr>
+        <td colspan="2"><%= form.label :visit_reason%><%= form.text_field :visit_reason, class:'form-control mb-3' %></td>
+      </tr>
+
+      <tr class="text center">
+        <td><%= form.submit %></td>
+      </tr>
+
+    </tbody>
+  </table>
+
+    <% form.label :account_id%>
     <%= form.hidden_field :account_id, value: current_account.id %>
-  </div>
 
-    <div>
-    <%= form.label :visit_reason, style: "display: block" %>
-    <%= form.text_field :visit_reason, class:'form-control' %>
-  </div>
-  
-  <br/>
-  <div>
-    <%= form.submit %>
-  </div>
+    <br/>
+    
 <% end %>
