--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,13 +1,16 @@
 <%= render @appointment %>
 
-<div>
-  <%= link_to "Edit this appointment", edit_appointment_path(@appointment) %> |
-  <%= link_to "Back to appointments", appointments_path %>
-</div>
 
-<div class="text-end mt-4">
-  <%= link_to "Delete Appointment", @clinic, class:'btn btn-danger btn-sm', data: {
-            turbo_method: :delete,
-            turbo_confirm: "Are you sure you want to Delete this Appointment?"
-        } %>
+<div class="row">
+  <div class="col text-start mt-4">
+    <%= link_to "Edit this appointment", edit_appointment_path(@appointment), class:'text-end btn btn-primary btn-sm' %> 
+    <%= link_to "Back to appointments", appointments_path, class:'text-end btn btn-primary btn-sm' %>
+  </div>
+
+  <div class="col text-end mt-4">
+    <%= link_to "Delete Appointment", @clinic, class:'btn btn-danger btn-sm', data: {
+              turbo_method: :delete,
+              turbo_confirm: "Are you sure you want to Delete this Appointment?"
+          } %>
+  </div>
 </div>
