added landing page to home, updated home controller and routes, moved react content tag to landing page, updated clinic show/index views

--- a/app/views/clinics/_clinic.html.erb
+++ b/app/views/clinics/_clinic.html.erb
@@ -1,5 +1,10 @@
 <div id="<%= dom_id clinic %>">
 
+  <%= image_tag "clinic-believe-it.png", class:'img-thumbnail bg-dark', alt:'clinic building', width:'256', height:'171' %>
+
+  <br/>
+  <br/>
+
   <p>
     <strong>Address:</strong>
     <%= clinic.address %>
