--- a/app/views/home/_nav.html.erb
+++ b/app/views/home/_nav.html.erb
@@ -12,7 +12,7 @@
         <% if account_signed_in? %>
 
           <li class="nav-item me-2">
-            <%= link_to 'Account Overview', root_path, class:'btn btn-primary btn-sm p-1' %>
+            <%= link_to 'Account Overview', home_path, class:'btn btn-primary btn-sm p-1' %>
           </li>
 
           <li class="nav-item me-2">
