--- a/app/views/home/_nav.html.erb
+++ b/app/views/home/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark p-1">
   <div class="container-fluid">
-    <%= link_to "Med Test", root_path, data: {turbo: false}, class:'navbar-brand' %>
+    <%= link_to "Med App", root_path, data: {turbo: false}, class:'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
