--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark p-3">
   <div class="container-fluid">
-    <p class="mb-3 mb-md-0 text-light">&copy; <%= Date.today.year %> Med-Test, Inc</p>
+    <p class="mb-3 mb-md-0 text-light">&copy; <%= Date.today.year %> Med App, Inc</p>
     <p class="mb-3 mb-md-0 text-light">Head Office: 3942 Splanketer Dr, Wilterbonze, NL, X3Y 4Z5</p>
   </div>
 </nav>
