--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -14,6 +14,18 @@
   
 </div>
 <hr/>
+<div class="row">
+  <div class="col-8">
+    <%= form_with url: "/patients", method: :get do |f| %>
+      <%= f.label :query, "Search for:" %>
+      <%= f.search_field :query %>
+      <%= f.submit "Search" %>
+      <%= link_to "Reset", patients_path %>
+    <% end %>
+  </div>
+</div>
+
+<br/>
 
 <table class="table table-hover table-striped">
     <thead class="table-dark">
@@ -28,12 +40,12 @@
       <% if @patients.empty? %>
 
         <tr>
-          <td colspan="4" class="text-center">Added Patients will appear here</td>
+          <td colspan="4" class="text-center">No Patient Records</td>
         </tr>
 
       <% else %>
 
-        <% @patients.order(:name).each do |patient| %>
+        <% @patients.order(:name).limit(25).each do |patient| %>
 
           <tr>
             <td scope="row"><%= patient.name %></td>
